--- a/KatsanaSDK.xcodeproj/xcshareddata/xcschemes/KatsanaSDK macOS.xcscheme
+++ b/KatsanaSDK.xcodeproj/xcshareddata/xcschemes/KatsanaSDK macOS.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "0900"
+   LastUpgradeVersion = "1420"
    version = "1.3">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,10 +14,10 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "7CA5E0D9C937A02064735B88BF202E14"
-               BuildableName = "Pods_KatsanaSDK_macOS.framework"
-               BlueprintName = "Pods-KatsanaSDK macOS"
-               ReferencedContainer = "container:Pods.xcodeproj">
+               BlueprintIdentifier = "C74927851DDA831600A0767E"
+               BuildableName = "KatsanaSDK.framework"
+               BlueprintName = "KatsanaSDK macOS"
+               ReferencedContainer = "container:KatsanaSDK.xcodeproj">
             </BuildableReference>
          </BuildActionEntry>
       </BuildActionEntries>
@@ -26,35 +26,30 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       shouldUseLaunchSchemeArgsEnv = "YES">
       <Testables>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C1051182298778D1006D9CB7"
+               BuildableName = "KatsanaSDKmacOSTests.xctest"
+               BlueprintName = "KatsanaSDKmacOSTests"
+               ReferencedContainer = "container:KatsanaSDK.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </TestAction>
    <LaunchAction
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = ""
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <MacroExpansion>
-         <BuildableReference
-            BuildableIdentifier = "primary"
-            BlueprintIdentifier = "7CA5E0D9C937A02064735B88BF202E14"
-            BuildableName = "Pods_KatsanaSDK_macOS.framework"
-            BlueprintName = "Pods-KatsanaSDK macOS"
-            ReferencedContainer = "container:Pods.xcodeproj">
-         </BuildableReference>
-      </MacroExpansion>
-      <AdditionalOptions>
-      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
@@ -62,6 +57,15 @@
       savedToolIdentifier = ""
       useCustomWorkingDirectory = "NO"
       debugDocumentVersioning = "YES">
+      <MacroExpansion>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C74927851DDA831600A0767E"
+            BuildableName = "KatsanaSDK.framework"
+            BlueprintName = "KatsanaSDK macOS"
+            ReferencedContainer = "container:KatsanaSDK.xcodeproj">
+         </BuildableReference>
+      </MacroExpansion>
    </ProfileAction>
    <AnalyzeAction
       buildConfiguration = "Debug">
