Make VehicleLocation trackedAt non-optional, change optional var from `!` to `?` for best practice

--- a/KatsanaSDK.xcodeproj/xcshareddata/xcschemes/KatsanaSDK macOS.xcscheme
+++ b/KatsanaSDK.xcodeproj/xcshareddata/xcschemes/KatsanaSDK macOS.xcscheme
@@ -26,10 +26,22 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES"
+      codeCoverageEnabled = "YES"
+      onlyGenerateCoverageForSpecifiedTargets = "YES">
+      <CodeCoverageTargets>
+         <BuildableReference
+            BuildableIdentifier = "primary"
+            BlueprintIdentifier = "C74927851DDA831600A0767E"
+            BuildableName = "KatsanaSDK.framework"
+            BlueprintName = "KatsanaSDK macOS"
+            ReferencedContainer = "container:KatsanaSDK.xcodeproj">
+         </BuildableReference>
+      </CodeCoverageTargets>
       <Testables>
          <TestableReference
-            skipped = "NO">
+            skipped = "NO"
+            testExecutionOrdering = "random">
             <BuildableReference
                BuildableIdentifier = "primary"
                BlueprintIdentifier = "C1051182298778D1006D9CB7"
