Update config, fixed KatsanaSDKCacheIntegrationTests

--- a/KatsanaSDK.xcodeproj/xcshareddata/xcschemes/KatsanaSDK.xcscheme
+++ b/KatsanaSDK.xcodeproj/xcshareddata/xcschemes/KatsanaSDK.xcscheme
@@ -50,6 +50,16 @@
                ReferencedContainer = "container:KatsanaSDK.xcodeproj">
             </BuildableReference>
          </TestableReference>
+         <TestableReference
+            skipped = "NO">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "C11FECEA29CC172C003914DC"
+               BuildableName = "KatsanaSDKCacheIntegrationTests.xctest"
+               BlueprintName = "KatsanaSDKCacheIntegrationTests"
+               ReferencedContainer = "container:KatsanaSDK.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
       </Testables>
    </TestAction>
    <LaunchAction
